<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/setting_grip_touch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_setting_list_row_back"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_toLeftOf="@+id/grip_switch_line"
            android:orientation="vertical" 
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_grip_touch_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_grip_touch_summary"
                android:textColor="#8d9ca3" />
        </LinearLayout>

        <View
            android:id="@+id/grip_switch_line"
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/grip_switch"
            android:layout_alignTop="@+id/grip_switch"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/grip_switch"
            android:background="@drawable/custom_setting_list_row_line_back" />

        <Switch
            android:id="@+id/grip_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="33dp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#6e7172" />
    
    <RelativeLayout
        android:id="@+id/setting_lock_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_setting_list_row_back"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" 
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_lock_test_title"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/setting_lock_test_summary"
                android:textColor="#8d9ca3" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#6e7172" />
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/custom_setting_list_row_back"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:orientation="vertical" 
            android:layout_marginLeft="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_name"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/version_summary"
                android:textColor="#8d9ca3" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#6e7172" />

</LinearLayout>